--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
   "dependencies": {
     "lodash": "^4.17.5",
     "fs-extra": "^5.0.0",
-    "klaw-sync": "^3.0.2",
+    "glob": "^7.1.2",
     "tslint": "^5.8.0",
     "typescript": "~2.7.2"
   },
   "devDependencies": {
     "@types/fs-extra": "^5.0.1",
-    "@types/klaw-sync": "^1.1.3",
+    "@types/glob": "^5.0.35",
     "@types/lodash": "^4.14.104",
     "@types/node": "^8.2.0",
     "bm-tslint-rules": "github:bettermarks/bm-tslint-rules#v0.0.8",
