--- a/package.json
+++ b/package.json
@@ -34,17 +34,19 @@
   "dependencies": {
     "lodash": "^4.17.5",
     "fs-extra": "^5.0.0",
-    "glob": "^7.1.2",
-    "tslint": "^5.8.0",
-    "typescript": "~2.7.2"
+    "glob": "^7.1.2"
   },
   "devDependencies": {
     "@types/fs-extra": "^5.0.1",
     "@types/glob": "^5.0.35",
     "@types/lodash": "^4.14.104",
     "@types/node": "^8.2.0",
-    "bm-tslint-rules": "github:bettermarks/bm-tslint-rules#v0.0.8",
-    "ts-node": "^5.0.1"
+    "bm-tslint-rules": "github:bettermarks/bm-tslint-rules#0033ec9",
+    "ts-node": "^5.0.1",
+    "typescript": "~2.7.2"
   },
-  "peerDependencies": {}
+  "peerDependencies": {
+    "tslint": ">=5.0.0",
+    "typescript": ">=2.1.0"
+  }
 }
