tslint-rules referred to non existing hash

--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@types/glob": "^5.0.35",
     "@types/lodash": "^4.14.104",
     "@types/node": "^10.9.4",
-    "bm-tslint-rules": "github:bettermarks/bm-tslint-rules#0033ec9",
+    "bm-tslint-rules": "github:bettermarks/bm-tslint-rules#v0.2.3",
     "ts-node": "^5.0.1",
     "typescript": "~2.7.2"
   },
