--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@types/glob": "5.0.35",
     "@types/lodash": "4.14.116",
     "@types/node": "10.9.4",
-    "bm-tslint-rules": "github:bettermarks/bm-tslint-rules#v0.2.3",
+    "bm-tslint-rules": "github:bettermarks/bm-tslint-rules#41e38d2",
     "ts-node": "7.0.1",
     "typescript": "3.0.3"
   },
