--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     // "noEmit": true,                        /* Do not emit outputs. */
     // "importHelpers": true,                 /* Import emit helpers from 'tslib'. */
     // "downlevelIteration": true,            /* Provide full support for iterables in 'for-of', spread, and destructuring when targeting 'ES5' or 'ES3'. */
-    "isolatedModules": true,
+    "isolatedModules": false,
     /* Transpile each file as a separate module (similar to 'ts.transpileModule'). */
 
     /* Strict Type-Checking Options */
@@ -39,7 +39,7 @@
     /* Parse in strict mode and emit "use strict" for each source file. */
 
     /* Additional Checks */
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     /* Report errors on unused locals. */
     "noUnusedParameters": true,
     /* Report errors on unused parameters. */
