Clean noodle code (#24)
- some changes in the data structure for for consistent behaviour
  - (unique) id and ruleName are always available
  - detect mismatch of `ruleName` from file name vs metadata (could be error in tslint-report or error in metadata), ignoring value from metadata when different since tslint also resolves rules using file name pattern.
  - before this PR rules with the same name from different rule sets where stored with their id as key and their ids were listed in the `sameName`field. Now they are stored in the `sameName` field directly in the available report, and only their id is listed in the active rules report
- documentation links are now stored in `rules.docs.json`
- extracted code into easily testable methods/modules
- fixes #4

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "tslint-report",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "This is a utility for maintaining a tslint rule set.",
   "repository": "https://github.com/karfau/tslint-report",
   "bugs": "https://github.com/karfau/tslint-report/issues",
   "main": "dist/report.js",
   "files": [
     "dist",
-    "bin"
+    "bin",
+    "rules.docs.json"
   ],
   "bin": {
     "tslint-report": "bin/tslint-report"
