--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "npm": ">=5.2.0"
   },
   "scripts": {
-    "preinstall": "npx check-node-version --package",
+    "preinstall": "npx check-node-version@3.3.0 --package",
     "preversion": "npm run build && npm run test",
     "check": "npx npm-check -u --skip-unused",
     "build": "tsc -p tsconfig.json",
